# YouTube-Downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/models/: downloader.py  validators.py  video_info.py
src/ui/: components.py  style.py
