[project]
name = "YouTube Downloader"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "TheFhoeniXs", email = "" }
]
dependencies = [
  "flet==0.28.3",
  "yt-dlp >=2026.1.6.233142.dev0"
]

[tool.flet]
org = "com.thefhoenixs"
product = "YouTube-Downloader"
company = "TheFhoneiXs Dev"
copyright = "Copyright (C) 2025 by TheFhoneiXs"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}